<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/schedule_calendar_view">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/schedule_bt_scroll_up"
            style="@style/FabScrollUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true" />

        <LinearLayout
            android:id="@+id/schedule_rv_band_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recycler_view_empty_band"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/schedule_rv_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/schedule_tv_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recycler_view_event_empty"
                android:textSize="16sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/schedule_rv_events_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/model_event">

        </androidx.recyclerview.widget.RecyclerView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <SearchView
        android:id="@+id/schedule_search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false"
        android:inputType="textPersonName"
        android:queryHint="@string/search_view"
        app:layout_constraintBottom_toTopOf="@+id/schedule_calendar_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </SearchView>

    <com.applandeo.materialcalendarview.CalendarView
        android:id="@+id/schedule_calendar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:requiresFadingEdge="vertical"
        app:headerColor="@color/dark_sea_green"
        app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout"
        app:layout_constraintTop_toBottomOf="@+id/schedule_search_view"
        app:swipeEnabled="true"
        app:todayLabelColor="@color/turquoise_green" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="496dp">

        <TextView
            android:id="@+id/schedule_fab_tv_mode"
            style="@style/FabTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_value"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/schedule_bt_calendar_mode"
            app:layout_constraintEnd_toStartOf="@+id/schedule_bt_calendar_mode"
            app:layout_constraintTop_toTopOf="@+id/schedule_bt_calendar_mode" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/schedule_bt_calendar_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:clickable="true"
            android:visibility="invisible"
            app:backgroundTint="@color/fab_mode"
            app:layout_constraintBottom_toTopOf="@+id/schedule_bt_add"
            app:layout_constraintEnd_toEndOf="@+id/schedule_bt_add"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/ic_schedule"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/schedule_fab_tv_add"
            style="@style/FabTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_fab_add"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/schedule_bt_add"
            app:layout_constraintEnd_toStartOf="@+id/schedule_bt_add"
            app:layout_constraintTop_toTopOf="@+id/schedule_bt_add" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/schedule_bt_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:clickable="true"
            android:contentDescription="@string/content_description_bt_add"
            android:tooltipText="@string/content_description_bt_add"
            android:visibility="invisible"
            app:backgroundTint="@color/fab_add"
            app:layout_constraintBottom_toTopOf="@+id/schedule_bt_options"
            app:layout_constraintEnd_toEndOf="@+id/schedule_bt_options"
            app:layout_constraintTop_toBottomOf="@+id/schedule_bt_calendar_mode"
            app:srcCompat="@drawable/ic_add_white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/schedule_bt_options"
            style="@style/Widget.Material3.FloatingActionButton.Large.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:contentDescription="@string/content_description_display_options"
            android:tooltipText="@string/content_description_display_options"
            app:backgroundTint="@color/fab_options"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/schedule_bt_add"
            app:srcCompat="@drawable/ic_camera" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>