...
        app:layout_constraintBottom_toTopOf="@+id/schedule_et_date_layout"
        app:layout_constraintEnd_toEndOf="@+id/schedule_et_duration_layout"
        app:layout_constraintStart_toStartOf="@+id/schedule_et_duration_layout"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/schedule_et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/et_name"
            android:inputType="textPersonName"
...
        app:layout_constraintBottom_toTopOf="@+id/schedule_et_duration_layout"
        app:layout_constraintEnd_toStartOf="@+id/schedule_et_time_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/schedule_et_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/schedule_et_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/et_date"
            android:inputType="date"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/schedule_et_date_layout"
        app:layout_constraintTop_toTopOf="@+id/schedule_et_date_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/schedule_et_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/et_time"
            android:inputType="time"
...
        app:boxCornerRadiusTopEnd="@dimen/corner_radius_edit_text"
        app:boxCornerRadiusTopStart="@dimen/corner_radius_edit_text"
        app:counterEnabled="true"
        app:counterMaxLength="@string/max_length_duration"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_timer"
        app:layout_constraintBottom_toTopOf="@+id/schedule_spinner_type"
        app:layout_constraintEnd_toEndOf="@+id/schedule_spinner_type"
        app:layout_constraintStart_toStartOf="@+id/schedule_spinner_type"
        app:layout_constraintTop_toBottomOf="@+id/schedule_et_date_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/schedule_et_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/et_duration"
            android:inputType="number"
...
        android:layout_marginVertical="8dp"
        android:autofillHints="@string/et_type"
        android:contentDescription="@string/content_description_spinner_role"
        android:minHeight="48dp"
        android:outlineProvider="bounds"
        android:popupElevation="20dp"
        app:layout_constraintBottom_toTopOf="@+id/schedule_button"
        app:layout_constraintEnd_toEndOf="@+id/schedule_button"
        app:layout_constraintStart_toStartOf="@+id/schedule_button"
        app:layout_constraintTop_toBottomOf="@+id/schedule_et_duration_layout" />

    <Button
        android:id="@+id/schedule_button"
...
